--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name" translatable="false">WPStores Example</string>
+    <string name="app_name" translatable="false">FluxC Example</string>
 </resources>
